Fixed overflow in articles view

--- a/wp-content/themes/osqledaren/assets/css/style.scss
+++ b/wp-content/themes/osqledaren/assets/css/style.scss
@@ -9,7 +9,6 @@ $osq-light-grey: #a0a0a0;
 $osq-medium-grey: #4f4f4f;
 $osq-dark-grey: #2f2f2f;
 
-$banner-height: 144px;
 $header-height: 110px;
 $footer-height: 200px;
 
